--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -8,6 +8,7 @@
     "com.unity.ide.rider": "3.0.26",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.mobile.android-logcat": "1.3.2",
     "com.unity.mobile.notifications": "2.3.1",
     "com.unity.purchasing": "4.10.0",
     "com.unity.test-framework": "1.3.9",
